# rust-commitizien

./: Cargo.toml  README.md
src/: commit.rs  main.rs  parser.rs
