[package]
name = "rs-commitizien"
version = "0.1.2"
authors = ["SpanishInquisition49"]
edition = "2021"
description = "A CLI Tool for validating commit messages"
license = "MIT"
repository = "https://github.com/SpanishInquisition49/rust-commitizien"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
regex = "1.10.4"
